Changed color to correct contrast

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 
 .hero-subheading {
     color: white;
-    background-color: #2A9D8F;
+    background-color: #1d6e64;
     padding: 10px 15px;
     font-size: 14px;
     border-radius: 5px;
